<resources>
    <string name="app_name">Myself Apps RB</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="daily_activities">Daily Activities</string>
    <string name="profile">Profile</string>
    <string name="music_favourite_video"><![CDATA[Music Favourite & Video]]></string>
    <string name="gallery">Gallery</string>
    <string name="daily_activity">Daily Activity</string>
    <string name="logout">Logout</string>
    <string name="arby_febrian_saputro">Arby Febrian Saputro</string>
    <string name="arbyfebrians18_gmail_com">arbyfebrians18@gmail.com</string>
    <string name="halo_nama_saya_adalah_arby_febrian_saputro_saya_lahir_di_bandung_pada_tanggal_18_februari_2002_saat_ini_saya_sedang_menempuh_pendidikan_di_universitas_komputer_indonesia_dengan_jurusan_teknik_informatika">Halo, nama saya adalah Arby Febrian Saputro. Saya lahir di Bandung pada tanggal 18 Februari 2002. Saat ini, saya sedang menempuh pendidikan di Universitas Komputer Indonesia dengan jurusan Teknik Informatika.</string>
    <string name="explore_exciting_features">Explore Exciting Features</string>
    <string name="welcome">Welcome</string>
    <string name="selamat_datang_di_myself_apps_rb">Selamat datang di Myself Apps RB.</string>
    <string name="disini_kamu_akan_melihat_beberapa_fitur_menarik_tentang_hal_yang_berhubungan_dengan_kreator">Disini kamu akan melihat beberapa fitur menarik tentang hal yang berhubungan dengan kreator.</string>
    <string name="get_started_now">Get Started Now</string>
    <string name="klik_tombol_mulai_sekarang_untuk_mengetahui_lebih_lanjut">Klik tombol mulai sekarang untuk mengetahui lebih lanjut.</string>
    <string name="mulai_sekarang">Mulai Sekarang</string>
    <string name="membuka_aplikasi">Membuka Aplikasi ...</string>
    <string name="top_5_music_favourite">TOP 5 Music Favourite</string>
    <string name="video_music_favourite">Video Music Favourite</string>
    <string name="favourite">Favourite</string>
    <string name="interest">Interest</string>
    <string name="watching_movie">Watching Movie</string>
    <string name="it_engineer">IT Engineer</string>
    <string name="gaming">Gaming</string>
    <string name="coding">Coding</string>
    <string name="music">Music</string>
    <string name="contacts_information">Contacts Information</string>
    <string name="no_telepon">No telepon</string>
    <string name="_6287716780948">+6287716780948</string>
    <string name="email">Email</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="instagram">Instagram</string>
    <string name="duskrbe">duskrbe</string>
    <string name="find_me">Find Me</string>
    <string name="about_app">About App</string>
    <string name="language_kotlin">Language: Kotlin</string>
    <string name="developer_arby_febrian_saputro">Developer: Arby Febrian Saputro</string>
    <string name="version_1_0_0">Version: 1.0.0</string>
    <string name="about">About</string>
    <string name="friend_list">Friend List</string>
    <string name="item">Item</string>
</resources>