<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn= "navigation_view">

    <group
        android:checkableBehavior="single">


        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/home"/>


        <item
            android:id="@+id/nav_daily"
            android:icon="@drawable/baseline_home_work_24"
            android:title="@string/daily_activity"/>

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/baseline_photo_library_24"
            android:title="@string/gallery"/>

        <item
            android:id="@+id/nav_favor"
            android:icon="@drawable/baseline_video_library_24"
            android:title="@string/music_favourite_video"/>

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/profile"/>


    </group>




</menu>