<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".HomeFragment">

    <!-- TODO: Update blank fragment layout -->

    <!--    <ImageView-->
    <!--        android:layout_width="160dp"-->
    <!--        android:layout_height="160dp"-->
    <!--        android:background="@drawable/shape_top_right_quartercircle_red"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->


    <androidx.cardview.widget.CardView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:background="@drawable/shape_top_halfcircle_red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:elevation="10dp"
            android:fontFamily="@font/game_of_squids"
            android:text="@string/home"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/shape_halfcircle_black"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/banner" />

    <!--    <ImageView-->
    <!--        android:layout_width="120dp"-->
    <!--        android:layout_height="120dp"-->
    <!--        android:background="@drawable/shape_halfcircle_black"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <!--    <ImageView-->
    <!--        android:layout_width="190dp"-->
    <!--        android:layout_height="70dp"-->
    <!--        android:background="@drawable/shape_halfcircle_black"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_prof"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@color/black"
        app:cardCornerRadius="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:background="@drawable/shape_circle_red"
            android:src="@drawable/profile_picture_1" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:paddingHorizontal="40sp"
        android:shadowColor="@color/black"
        android:shadowDx="-1"
        android:shadowDy="-1"
        android:shadowRadius="1"
        android:text="@string/halo_nama_saya_adalah_arby_febrian_saputro_saya_lahir_di_bandung_pada_tanggal_18_februari_2002_saat_ini_saya_sedang_menempuh_pendidikan_di_universitas_komputer_indonesia_dengan_jurusan_teknik_informatika"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_prof" />

    <View
        android:id="@+id/v_divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_desc" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_interest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/red_rb"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v_divider">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/shape_circle_red"
            android:fontFamily="@font/game_of_squids"
            android:gravity="center"
            android:paddingTop="10dp"
            android:textSize="15sp"
            android:paddingBottom="10dp"
            android:text="@string/interest"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linear_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_interest">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/coding" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:shadowColor="@color/black"
                android:shadowDx="-1"
                android:shadowDy="-1"
                android:shadowRadius="1"
                android:text="@string/coding"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/gaming" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:shadowColor="@color/black"
                android:shadowDx="-1"
                android:shadowDy="-1"
                android:shadowRadius="1"
                android:text="@string/gaming"
                android:textColor="@color/black" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/watching_movie" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:shadowColor="@color/black"
                android:shadowDx="-1"
                android:shadowDy="-1"
                android:shadowRadius="1"
                android:text="@string/watching_movie"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/music" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:shadowColor="@color/black"
                android:shadowDx="-1"
                android:shadowDy="-1"
                android:shadowRadius="1"
                android:text="@string/music"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/programming" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:shadowColor="@color/black"
                android:shadowDx="-1"
                android:shadowDy="-1"
                android:shadowRadius="1"
                android:text="@string/it_engineer"
                android:textColor="@color/black" />

        </LinearLayout>

    </LinearLayout>

    <!--    <View-->
    <!--        android:id="@+id/v_divider2"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="2dp"-->
    <!--        android:layout_marginTop="30dp"-->
    <!--        android:background="@color/grey"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/linear_2"/>-->


    <!--    <TextView-->
    <!--        android:id="@+id/textView3"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:gravity="center"-->
    <!--        android:text="HomeFragment"-->
    <!--        android:textColor="@color/red_rb"-->
    <!--        android:textSize="30sp"-->
    <!--        tools:layout_editor_absoluteX="0dp"-->
    <!--        tools:layout_editor_absoluteY="0dp" />-->

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/shape_bottom_left_quartercircle_red"
        android:elevation="-1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/shape_bottom_right_quartercircle_red"
        android:elevation="-1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:background="@drawable/shape_bottom_halfcircle_red"
        android:elevation="-1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>